Add test reporting to CircleCI.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,10 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm run lint
       - run: npm run type-check
-      - run: npm test
+      - run:
+          name: Jest Suite
+          command: npm test -- --ci --testResultsProcessor="jest-junit"
+          environment:
+            JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
+      - store_test_results:
+          path: reports
