--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/lodash": "^4.14.110",
     "chai": "^4.1.2",
     "jest": "^23.3.0",
+    "jest-junit": "^5.1.0",
     "ts-jest": "^23.0.0",
     "tslint": "^5.10.0",
     "tslint-config-standard": "^7.1.0",
