--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
   "name": "object-reference",
   "version": "0.0.1",
-  "description": "Resolves self-references in objects.",
+  "description": "Resolves objects with values referencing other paths in the same object.",
   "main": "lib/index.js",
+  "files": [
+    "lib/*"
+  ],
+  "keywords": [
+    "object",
+    "reference",
+    "self-referencing",
+    "object paths",
+    "self referencing",
+    "config",
+    "resolve",
+    "resolver"
+  ],
   "scripts": {
     "build": "tsc --emitDeclarationOnly && babel src --out-dir lib --extensions \".ts,.tsx\"",
+    "prepublish": "npm run build",
     "type-check": "tsc --noEmit",
     "lint": "tslint --project .",
     "test": "jest"
@@ -27,10 +41,6 @@
     "type": "git",
     "url": "git+https://github.com/sammarks/object-reference.git"
   },
-  "keywords": [
-    "object",
-    "reference"
-  ],
   "author": "Sam Marks <sam@sammarks.me>",
   "license": "MIT",
   "bugs": {
