--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ defaults:
 
 jobs:
   build:
+    <<: *defaults
     steps:
       - checkout
       - restore_cache:
@@ -31,6 +32,7 @@ jobs:
           root: ~/repo
           paths: .
   deploy:
+    <<: *defaults
     steps:
       - attach_workspace:
           at: ~/repo
