--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/chai": "^4.1.4",
     "@types/jest": "^23.1.4",
     "@types/lodash": "^4.14.110",
+    "babel-plugin-add-module-exports": "^0.3.1",
     "chai": "^4.1.2",
     "jest": "^23.3.0",
     "jest-junit": "^5.1.0",
