Deploy has open-source context.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ workflows:
             tags:
               only: /.*/
       - deploy:
+          context: open-source
           requires:
             - build
           filters:
